--- a/Loenn/lang/en_gb.lang
+++ b/Loenn/lang/en_gb.lang
@@ -66,6 +66,8 @@ entities.SSMHelper/ForceLightningLoadController.placements.name.normal=Force Lig
 
 entities.SSMHelper/FakeBino.placements.name.normal=Fake Watchtower
 
+entities.SSMHelper/CustomCassette.placements.name.normal=Cassette (Don't Disable Blocks)
+
 # ------------ triggers ------------
 
 triggers.SSMHelper/DashCancelTrigger.placements.name.normal=Dash Cancel Trigger
